Add subtitle and modify layout a little

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div id="menu">
         <div id="title">UltraStar WebTools</div>
+        <div id="subtitle">MIDI only works in Chrome 90+</div>
     </div>
     <div id="app">
         <table>
