--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UltraStar WebTools</title>
-    <script src="/node_modules/tone/build/Tone.js"></script>
+    <script src="/Tone.js"></script>
     <script src="/app.js"></script>
     <link rel="stylesheet" href="/style.css" type="text/css">
 </head>
